--- a/zines/static/zines/style.scss
+++ b/zines/static/zines/style.scss
@@ -1,3 +1,5 @@
+$orange: #FA4866;
+
 body {
     margin: auto;
     font-size: 17px;
@@ -8,9 +10,26 @@ body {
 body.editor {
     background: #333;
     color: #fff;
-    #editor {
-        background: #333;
+    a:hover {
         color: #fff;
+    }
+    input, select {
+        background: transparent;
+        box-shadow: none;
+        color: inherit;
+        &:focus {
+            background: #444;
+        }
+    }
+}
+label {
+    display: block;
+}
+input {
+    &.heading {
+        font-size: 2rem !important;
+        height: auto;
+        font-weight: bold !important;
     }
 }
 input, select {
@@ -18,89 +37,14 @@ input, select {
     font-weight: 100 !important;
 }
 a {
-    color: #FA4866;
-}
-a:hover {
-    color: #333;
+    color: $orange;
+    &:hover {
+        color: #333;
+    }
 }
 i {
     position: relative;
     bottom: -.2em;
-}
-ul.inline {
-    display: inline-block;
-    padding: 0;
-    list-style-type: none;
-}
-ul.inline li {
-    margin-left: 1rem;
-    display: inline-block;
-}
-#editor {
-    position: fixed;
-    top: 20%;
-    left: 0;
-    padding: 0 0 .75rem .5rem;
-    border-radius: 0 .5rem .5rem 0;
-    background: #333;
-}
-.editor a:hover {
-    color: #fff;
-}
-#editor a:hover {
-    color: #fff;
-}
-.editor #editor a:hover {
-    color: #333;
-}
-.editor input, .editor select {
-    background: transparent;
-    box-shadow: none;
-    color: inherit;
-}
-.editor input:focus {
-    background: #444;
-}
-#wrapper {
-    width: 100%;
-    max-width: 60rem;
-    margin: auto;
-}
-#logo {
-    font-size: 50px;
-    font-weight: 100;
-    display: inline-block;
-}
-#logo span {
-    font-weight: 800;
-    color: #FA4866;
-}
-#logo i {
-    position: relative;
-    bottom: -7px;
-    color: #FA4866;
-}
-#logo a {
-    color: inherit;
-}
-#header ul {
-    font-size: 1.2rem;
-    margin-left: 1em;
-    padding: 0;
-    color: #333;
-    font-weight: 100;
-    list-style-type: none;
-    text-transform: uppercase;
-}
-#header li {
-    display: inline-block;
-}
-#header li a {
-    opacity: .5;
-}
-#header li a:hover {
-    opacity: 1;
-    color: #FA4866;
 }
 h1 {
     margin-bottom: .25em;
@@ -111,119 +55,6 @@ date {
     margin: .5em 0;
     opacity: .6;
     font-weight: 100;
-}
-td date {
-    display: inline-block;
-    margin-left: 1em;
-}
-.actions {
-    float: right;
-    margin-top: 1em;
-}
-.actions .edit {
-    display: inline;
-    background: #333;
-    padding: 5px 0 5px 5px;
-    border-radius: 5px;
-}
-.info {
-    display: inline-block;
-    margin-left: .5em;
-}
-.desc {
-    font-size: 1.2em;
-    font-weight: 100;
-}
-.desc img {
-    display: block;
-    width: 100%;
-    height: auto;
-    width: auto;
-}
-.desc .cover {
-    padding: 0;
-    margin: 0 1rem 1rem 0;
-    background: #fafafa;
-    font-size: 1.1em;
-}
-.desc .cover p {
-    margin: .5em 0;
-    line-height: 1;
-}
-.info a {
-    color: #bbb;
-}
-.info a:hover {
-    color: #FA4866;
-}
-#works {
-    padding: 0;
-    list-style-type: none;
-    margin: 0;
-    width: 100%;
-    border-collapse: collapse;
-}
-#works td {
-    padding: 0 1em .6em 1em;
-}
-#works td:first-child {
-    padding: 1em;
-    width: 100%;
-}
-#works tr:nth-child(2n) {
-    background: #f7f7f7;
-}
-.authors ul li:not(:last-child):after {
-    content: ',';
-    margin-left: -3px;
-    padding: 0;
-}
-.block {
-    margin: 1.5rem 0;
-}
-.issue {
-    z-index: -1;
-    background-color: #333;
-    padding: 0;
-    width: 100%;
-    height: 200px;
-}
-.issue .bg {
-    position: relative;
-    top: 0;
-    z-index: 0;
-    width: 100%;
-    opacity: .4;
-    background-position: center;
-    background-size: cover;
-    height: 200px;
-}
-.issue .title {
-    position: relative;
-    z-index: 3000;
-    top: -200px;
-    left: 0;
-    color: #fff;
-    padding: 2rem 0;
-    width: 100%;
-    margin: auto;
-    text-align: center;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 35px;
-    font-weight: 100;
-    transition: .15s;
-}
-.issue .title a {
-    color: inherit;
-}
-.issue .title:hover {
-    background: rgba(255, 255, 255, .2);
-}
-.page {
-    margin-bottom: 1rem;
 }
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
@@ -239,7 +70,199 @@ td date {
 hr {
     clear: both;
 }
+ul.inline {
+    display: inline-block;
+    padding: 0;
+    list-style-type: none;
+    li {
+        margin-left: 1rem;
+        display: inline-block;
+    }
+}
+#editor {
+    position: fixed;
+    top: 20%;
+    left: 0;
+    padding: 0 0 .75rem .5rem;
+    border-radius: 0 .5rem .5rem 0;
+    background: #333;
+    a:hover {
+        color: #fff;
+    }
+}
+body.editor {
+    #editor {
+        background: #fff;
+        color: #333;
+        a:hover {
+            color: #333;
+        }
+    }
+}
+#header {
+    ul {
+        font-size: 1.2rem;
+        margin-left: 1em;
+        padding: 0;
+        color: #333;
+        font-weight: 100;
+        list-style-type: none;
+        text-transform: uppercase;
+        li {
+            display: inline-block;
+            a {
+                opacity: .5;
+                &:hover {
+                    opacity: 1;
+                    color: $orange;
+                }
+            }
+        }
+    }
+}
+#wrapper {
+    width: 100%;
+    max-width: 60rem;
+    margin: auto;
+}
+#logo {
+    font-size: 50px;
+    font-weight: 100;
+    display: inline-block;
+    span {
+        font-weight: 800;
+        color: $orange;
+    }
+    i {
+        position: relative;
+        bottom: -7px;
+        color: $orange;
+    }
+    a {
+        color: inherit;
+    }
+}
+.actions {
+    float: right;
+    margin-top: 1em;
+    .edit {
+        display: inline;
+        background: #333;
+        padding: 5px 0 5px 5px;
+        border-radius: 5px;
+    }
+}
+.info {
+    display: inline-block;
+    margin-left: .5em;
+    a {
+        color: #bbb;
+        &:hover {
+            color: $orange;
+        }
+    }
+}
+.desc {
+    font-size: 1.2em;
+    font-weight: 100;
+    img {
+        display: block;
+        width: 100%;
+        height: auto;
+        width: auto;
+    }
+    .cover {
+        padding: 0;
+        margin: 0 1rem 1rem 0;
+        background: #fafafa;
+        font-size: 1.1em;
+        p {
+            margin: .5em 0;
+            line-height: 1;
+        }
+    }
+}
+#works {
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
+    width: 100%;
+    border-collapse: collapse;
+    tr {
+        &:nth-child(2n) {
+            background: #f7f7f7;
+        }
+        td {
+            padding: 0 1em .6em 1em;
+            &:first-child {
+                padding: 1em;
+                width: 100%;
+            }
+        }
+    }
+}
+.authors {
+    ul {
+        li { 
+            &:not(:last-child){
+                &:after {
+                    content: ',';
+                    margin-left: -3px;
+                    padding: 0;
+                }
+            }
+        }
+    } 
+}
+.block {
+    margin: 1.5rem 0;
+}
+.issue {
+    z-index: -1;
+    background-color: #333;
+    padding: 0;
+    width: 100%;
+    height: 200px;
+    .bg {
+        position: relative;
+        top: 0;
+        z-index: 0;
+        width: 100%;
+        opacity: .4;
+        background-position: center;
+        background-size: cover;
+        height: 200px;
+    }
+    .title {
+        position: relative;
+        z-index: 3000;
+        top: -200px;
+        left: 0;
+        color: #fff;
+        padding: 2rem 0;
+        width: 100%;
+        margin: auto;
+        text-align: center;
+        height: 200px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 35px;
+        font-weight: 100;
+        transition: .15s;
+        a {
+            color: inherit;
+        }
+        &:hover {
+            background: rgba(255, 255, 255, .2);
+        }
+    }
+}
+.page {
+    margin-bottom: 1rem;
+}
 
+// quill editor
 .ql-toolbar * {
     color: #fff !important;
 }
@@ -253,18 +276,9 @@ hr {
     padding: 0 !important;
     font-size: 1rem;
     font-weight: 100;
-}
-.ql-editor p {
-    margin: 1rem !important;
-}
-
-input.heading {
-    font-size: 2rem !important;
-    height: auto;
-    font-weight: bold !important;
-}
-label {
-    display: block;
+    p {
+        margin: 1rem !important;
+    }
 }
 
 div#id_end_date_month,
@@ -281,11 +295,20 @@ select#id_start_date_year {
     width: 31%;
     display: inline-block;
 }
+div#id_authors,
 div#id_show_author,
 div#id_external,
 div#id_submissions_open {
     display: inline-block;
-    width: 31%;
+    width: 24%;
+    vertical-align: middle;
+    padding-right: 1rem;
+}
+div#id_contact_email,
+div#id_submission_email,
+div#id_website {
+    width: 33%;
+    display: inline-block;
 }
 label[for=id_show_author],
 label[for=id_external],
@@ -293,13 +316,17 @@ label[for=id_submissions_open] {
     display: inline;
     margin-right: 1rem;
 }
-body.home .issue,
-body.home .issue .bg,
-body.home .issue .title {
-    height: 130px;
-}
-body.home .issue .title {
-    top: -130px;
+body.home {
+    .issue {
+        height: 130px;
+        .bg {
+            height: 130px;
+        }
+        .title {
+            height: 130px;
+            top: -130px;
+        }
+    }
 }
 img.preview {
     width: 100px;
