--- a/zines/static/zines/style.scss
+++ b/zines/static/zines/style.scss
@@ -83,7 +83,7 @@ ul.inline {
     position: fixed;
     top: 20%;
     left: 0;
-    padding: 0 0 .75rem .5rem;
+    padding: 0 .25rem .75rem .5rem;
     border-radius: 0 .5rem .5rem 0;
     background: #333;
     a:hover {
@@ -325,6 +325,23 @@ body.home {
         .title {
             height: 130px;
             top: -130px;
+        }
+    }
+    .recent-zines {
+        padding: 2rem 0;
+        .columns {
+            padding: 0;
+        }
+        .cover {
+            padding: 0;
+            height: 300px;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            transition: .15s;
+            &:hover {
+                opacity: .5;
+            }
         }
     }
 }
