--- a/zines/templates/zines/profile.html
+++ b/zines/templates/zines/profile.html
@@ -4,6 +4,17 @@
     {{ profile }}
 {% endblock %}
 
+{% block editor %}
+    {% if user.is_authenticated and user.id == profile.user.id %}
+        <div id="editor">
+            <a href="{% url 'edit_profile' profile.id %}">
+                <i class="material-icons md-48">edit</i>
+            </a>
+            &nbsp;
+        </div>
+    {% endif %}
+{% endblock %}
+
 {% block body %}
     {% load static %}
     <h1>{{ profile }}</h1>
@@ -20,7 +31,7 @@
         {% endif %}
     </div>
     <date>member since {{ profile.member_since|date:'b j, Y' }}</date>
-    <p>{{ profile.bio }}</p>
+    <p>{{ profile.bio|safe }}</p>
     <hr/>
     {% if works %}
         <div class="zines">
