modified edit zine page, formatted guest/ext guest authors

--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -24,6 +24,9 @@ body.editor {
       border-color: #aaa; }
   body.editor select[multiple=multiple] {
     border-width: 1px; }
+  body.editor input[type=checkbox] {
+    border: none;
+    margin: 0 .25rem 0 0; }
 
 label {
   display: block;
@@ -80,6 +83,9 @@ date {
 
 .material-icons.md-60 {
   font-size: 60px; }
+
+.row {
+  margin: 1rem auto; }
 
 .clearfix {
   clear: both; }
@@ -273,18 +279,9 @@ body.editor #header ul li a {
   .ql-container.active, .ql-toolbar.active {
     border-color: #aaa !important; }
 
-div#id_end_date_month,
-div#id_start_date_month {
+div#id_end_date,
+div#id_start_date {
   width: 49.5%;
-  display: inline-block; }
-
-select#id_end_date_month,
-select#id_end_date_day,
-select#id_end_date_year,
-select#id_start_date_month,
-select#id_start_date_day,
-select#id_start_date_year {
-  width: 31%;
   display: inline-block; }
 
 div#id_authors,
@@ -331,7 +328,15 @@ body.home .recent-zines {
       opacity: .5; }
 
 img.preview {
-  width: 100px;
-  height: auto;
   float: left;
-  margin: 0 1rem 1rem 0; }
+  margin: 0 1rem 1rem 0;
+  cursor: pointer; }
+
+.hide {
+  display: block;
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  visibility: hidden; }
+
+/*# sourceMappingURL=../../../../../../../static/zines/style.css.map */
