--- a/zines/templates/zines/zine.html
+++ b/zines/templates/zines/zine.html
@@ -10,6 +10,7 @@
             <div id="editor">
                 <a href="{% url 'edit_zine' zine.id %}">
                     <i class="material-icons md-48">edit</i>
+                    <div class="label">Edit</div>
                 </a>
                 &nbsp;
             </div>
