--- a/zines/static/zines/style.css
+++ b/zines/static/zines/style.css
@@ -105,11 +105,26 @@ ul.inline {
   position: fixed;
   top: 20%;
   left: 0;
-  padding: 0 .25rem .75rem .5rem;
+  color: #fff;
   border-radius: 0 .5rem .5rem 0;
-  background: #333; }
+  background: #333;
+  box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.1); }
   #editor a:hover {
     color: #fff; }
+  #editor i {
+    padding: 0 .5rem 1.25rem .5rem; }
+  #editor div.label {
+    display: none;
+    vertical-align: top;
+    padding-top: 1.3rem;
+    padding-right: 1rem;
+    margin-left: .25rem; }
+    #editor div.label.show {
+      display: inline-block; }
+  #editor .check {
+    color: #71c030; }
+  #editor .close {
+    color: #ff0072; }
 
 body.editor #editor {
   background: #fff;
